--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+chambasoftEndpoint=https://chambasoft.herokuapp.com
 
+logging.level.mx.tec.web.lab=DEBUG
+#logging.level.root=DEBUG
+
+springdoc.api-docs.path=/api-docs
